Fixed register and login styles and added gap to images

--- a/src/styles/pages/Login.module.scss
+++ b/src/styles/pages/Login.module.scss
@@ -1,5 +1,5 @@
 .login {
-  .authenticationContainer {
+  .container {
     gap: 150px;
   }
 
@@ -11,7 +11,7 @@
   }
 
   @media only screen and (max-width: 1440px) {
-    .authenticationContainer {
+    .container {
       gap: 100px !important;
     }
     .loginImage {
