--- a/src/styles/pages/Register.module.scss
+++ b/src/styles/pages/Register.module.scss
@@ -1,5 +1,5 @@
 .register {
-  .authenticationContainer {
+  .container {
     gap: 200px;
   }
 
@@ -11,7 +11,7 @@
   }
 
   @media only screen and (max-width: 1440px) {
-    .authenticationContainer {
+    .container {
       gap: 150px !important;
     }
     .registerImage {
